# UnityLobby

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: markdown-lint.yml
docs/: UnityXX.md  architecture.md  compatibility-matrix.md  protocol-adoption-checklist.md
docs/protocol/: README.md  REGISTRY-GUIDE.md  STYLE.md  app-metadata-tlvs-v0.md  registries-v0.2.md  unitygpu-stream-v0.md  unitylink-v0.2.md  v0.2-errata.md  v0.3-handoff.md
repo/: README.md
server/: CMakeLists.txt  README.md
server/config/: unitylobby.example.toml
server/src/: main.cpp  unitylink.cpp  unitylink.hpp  vector_replay.cpp
test-vectors/frames/: app_manifest_get_req.hex  app_manifest_get_resp.hex  catalog_list_req.hex  catalog_list_resp.hex  hello_req.hex  object_data_resp.hex  object_end_resp.hex  object_get_req.hex  room_create_req.hex  room_create_resp.hex  room_event_joined_evt.hex  room_input_evt.hex  room_input_req.hex  room_join_req_player.hex  room_join_req_spectator.hex  room_join_resp_player.hex  room_join_resp_spectator.hex  save_data_resp.hex  save_end_resp.hex  save_get_req.hex  save_put_begin_req.hex  save_put_commit_req.hex  save_put_data_req.hex  save_put_resp.hex  welcome_resp.hex
tools/: README.md  hexframes_to_bin.py  sync_compat_tables.py
